# unified-ecommerce

./: .buildinfo  .coveragerc  .env.example  .eslintrc.js  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc.json  .secrets.baseline  Dockerfile  Dockerfile-nb  Dockerfile-node  LICENSE  Procfile  README-keycloak-learn.md  README-keycloak.md  README.md  RELEASE.rst  app.json  conftest.py  db.sqlite3  docker-compose-apisix.yml  docker-compose-notebook.yml  docker-compose-traefik-override.yml  docker-compose-traefik.yml  docker-compose.yml  generated-codes.csv  genindex.html  index.html  introduction.html  jest-shared-setup.ts  jest.config.ts  jest.jsdom.config.ts  manage.py  objects.inv  openapi.yaml  package-lock.json  package.json  pyproject.toml  (+7 more)
.doctrees/: environment.pickle  index.doctree  introduction.doctree
.doctrees/technical/: apigateway.doctree  events.doctree  index.doctree
.github-ex/workflows/: ci.yml
.github/workflows/: ci.yml  docs.yml  openapi-diff.yml  release-candiate.yml
_sources/: introduction.md.txt
_sources/technical/: apigateway.md.txt  events.md.txt
authentication/: admin.py  api.py  api_test.py  apps.py  backends.py  dataclasses.py  decorators.py  hooks.py  middleware.py  middleware_test.py  models.py  models_test.py  urls.py  views.py
authentication/backends/: ol_open_id_connect.py
authentication/migrations/: 0001_add_keycloak_token_table.py  0001_add_user_profile_model.py  0001_initial.py  0002_add_keycloak_user_info_model.py  0002_blockediprange.py  0003_add_helptext_to_keycloak_token_fields.py  0004_allow_none_refresh_tokens.py
authentication/pipeline/: user.py  user_test.py
cart/: apps.py  tables.py  urls.py  views.py
cart/templates/: base.html  cart.html  checkout_interstitial.html  order_history.html
config/: nginx.conf  nginx.conf.erb
config/apisix/: apisix.yaml  apisix.yml
config/nginx/: nginx.conf
docs/source/: conf.py  index.rst  introduction.md
fixtures/: common.py  users.py
openapi/: apps.py  settings_spectacular.py
openapi/specs/: v0.yaml
payments/: admin.py  api.py  api_test.py  apps.py  constants.py  dataclasses.py  exceptions.py  factories.py  hookspecs.py  mail_api.py  messages.py  models.py  models_test.py  permissions.py  tasks.py  tasks_test.py  tests.py  urls.py  utils.py  utils_test.py  views.py
payments/hooks/: basket_add.py  basket_add_test.py  post_sale.py  post_sale_test.py
payments/migrations/: 0001_add_order_and_basket_models.py  0002_remove_system_slug_from_basket.py  0003_alter_order_state.py  0004_add_blockedcountry_and_taxrates.py  0004_basket_integrated_system_alter_basket_user.py  0004_blockedcountry_taxrate_and_more.py  0004_blockedcountry_taxrate_basket_user_country_code_and_more.py  0004_remove_existing_baskets.py  0005_basket_integrated_system_alter_basket_user.py  0006_discount.py  0006_discount_line_discounted_price_redeemeddiscount_and_more.py  0007_discount_assigned_users_redeemeddiscount.py  0007_populate_line_discount_price.py  0008_alter_discount_integrated_system.py  0008_remove_discount_assigned_users_and_more.py  0009_add_blocked_country_tax_rate_update_basket.py  0009_add_blocked_country_tax_rate_update_basket_order.py  0009_basket_discounts.py  0009_bulkdiscountcollection.py  0009_bulkdiscountcollection_and_more.py  0010_bulkdiscountcollection_and_more.py  0010_change_country_fields_to_chars.py  0010_line_discounted_price_alter_discount_amount.py  0011_alter_discount_discount_code.py  0012_company_discount_transaction_number_and_more.py  0013_add_companies.py  0014_alter_discount_payment_type.py  0015_order_integrated_system.py
payments/templates/: checkout_interstitial.html
payments/views/v0/: urls.py  (+3 more)
refunds/: admin.py  api.py  api_test.py  apps.py  exceptions.py  factories.py  fixtures.py  hookspecs.py  mail_api.py  models.py  sheets.py  sheets_plugin.py  tasks.py  urls.py
refunds/hooks/: refund_created.py  refund_denied.py  refund_issued.py
refunds/migrations/: 0001_add_initial_refunds_models.py  0002_add_refund_reason.py
sandbox/: apps.py  urls.py  views.py
scripts/: bootstrap_apisix-home-keycloak.sh  bootstrap_apisix.sh  envs.sh  generate_openapi.sh  get-hash.sh  heroku-release-phase.sh  http-ok.js  install_yarn.js  run-django-dev.sh  run-watch-dev.sh
scripts/openapi-configs/: typescript-axios-v0.yaml  typescript-axios.yaml
scripts/test/: no_auto_migrations.sh  openapi_spec_check-local.sh  openapi_spec_check.sh  stub-data.sh
system_meta/: admin.py  api.py  api_test.py  apps.py  factories.py  fixtures.py  models.py  private_urls.py  serializers.py  serializers_test.py  tasks.py  tests.py  urls.py  views.py  views_test.py
system_meta/migrations/: 0001_add_initial_system_meta_models.py  0001_add_integrated_system_and_product_models.py  0001_add_products_and_integrated_systems.py  0001_add_products_and_system_data.py  0002_add_system_slug.py  0003_add_system_webhook_url_fields.py  0004_rename_sale_succeeded_webhook_url_integratedsystem_webhook_url_and_more.py  0005_integratedsystem_payment_process_redirect_url.py  0006_integratedsystemapikey.py  0007_product_image_metadata.py  0008_integratedsystem_homepage_url.py  0009_product_details_url.py
technical/: apigateway.html  events.html  index.html
unified_ecommerce/: apps.py  asgi.py  auth_utils.py  auth_utils_test.py  authentication.py  authentication_test.py  celery.py  constants.py  envs_test.py  exceptions.py  factories.py  middleware.py  models.py  permissions.py  plugin_manager.py  routers.py  serializers.py  settings.py  settings_celery.py  settings_pluggy.py  settings_spectacular.py  settings_test.py  test_utils.py  test_utils_test.py  urls.py  urls_spectacular.py  utils.py  utils_test.py  viewsets.py  wsgi.py
unified_ecommerce/templates/: admin.html
unifiedecommerce/: asgi.py  celery.py  envs_test.py  sentry.py  settings.py  settings_celery.py  settings_pluggy.py  settings_spectacular.py  settings_test.py  urls.py  wsgi.py
users/: admin.py  api.py  api_test.py  apps.py  dataclasses.py  factories.py  models.py  urls.py  views.py  views_test.py
(+30 files in other folders)
